fix: aligns ratings on hover

--- a/src/assets/scss/components/_productcard.scss
+++ b/src/assets/scss/components/_productcard.scss
@@ -225,6 +225,7 @@
       bottom: 40%;
       height: 19px;
       right: 10.46%;
+      min-width: 150px;
 
       .text-score {
         margin-bottom: 0px;
